libxml-api-perl (0.14-1) stable; urgency=low

  * Minor documentation changes.

 -- Mark Lawrence <nomad@null.net>  Fri, 11 May 2007 01:25:12 +0200

libxml-api-perl (0.13-1) stable; urgency=low

  * New Upstream.

 -- Mark Lawrence <nomad@null.net>  Thu,  1 Mar 2007 13:26:08 +0100

libxml-api-perl (0.12-1) stable; urgency=low

  * New upstream

 -- Mark Lawrence <nomad@null.net>  Tue, 27 Feb 2007 15:44:56 +0100

libxml-api-perl (0.11-2) stable; urgency=low

  * Upstream - Documentation of -- in comments.

 -- Mark Lawrence <nomad@null.net>  Tue, 27 Feb 2007 15:29:49 +0100

libxml-api-perl (0.11-1) stable; urgency=low

  * New upstream.
  * Added dependency on libtree-simple-perl 1.17

 -- Mark Lawrence <nomad@null.net>  Tue, 27 Feb 2007 14:58:18 +0100

libxml-api-perl (0.10-1) stable; urgency=low

  * New upstream.
  * This is a temporary deb-only release for the myspam package.

 -- Mark Lawrence <nomad@null.net>  Sun, 21 Jan 2007 08:53:02 +0100

libxml-api-perl (0.09-4) testing; urgency=low

  * New upstream

 -- Mark Lawrence <nomad@null.net>  Sat, 22 Apr 2006 14:51:24 +0200

libxml-api-perl (0.09-3) testing; urgency=low

  * New upstream

 -- Mark Lawrence <nomad@null.net>  Sat, 22 Apr 2006 13:01:05 +0200

libxml-api-perl (0.09-2) testing; urgency=low

  * Added changelog update from darcs.

 --  <nomad@null.net>  Tue, 30 Aug 2005 17:17:47 +0200

libxml-api-perl (0.09-1) testing; urgency=low

  * New Upstream

 --  <nomad@null.net>  Mon, 22 Aug 2005 13:12:27 +0200

libxml-api-perl (0.08-1) testing; urgency=low

  * New Upstream

 --  <nomad@null.net>  Mon, 22 Aug 2005 10:59:09 +0200

libxml-api-perl (0.07-1) testing; urgency=low

  * New Upstream

 --  <nomad@null.net>  Wed,  3 Aug 2005 13:01:56 +0200

libxml-api-perl (0.06-1) testing; urgency=low

  * New Upstream

 --  <nomad@null.net>  Wed, 20 Jul 2005 11:50:18 +0200

libxml-api-perl (0.05-2) testing; urgency=low

  * Fixed _add(XML::API) bug.

 --  <nomad@null.net>  Mon, 11 Jul 2005 14:57:44 +0200
